docs: Add API SPEC for Prodcut
